z-index fix

--- a/shared/js/cyph/components/account-profile/account-profile.component.scss
+++ b/shared/js/cyph/components/account-profile/account-profile.component.scss
@@ -156,6 +156,7 @@ $header-size: 135px;
 		margin-left: auto;
 		margin-right: auto;
 		min-height: calc(20em + 20px);
+		z-index: 1;
 
 		.buttons {
 			place-content: flex-start !important;
